syntax = "proto3";

package gateway_api;

message pubkey_res { bytes address = 1; }
message pubkey_req {}

message sign_req { bytes data = 1; }
message sign_res { bytes signature = 1; }

service api {
  rpc pubkey(pubkey_req) returns (pubkey_res);
  rpc sign(sign_req) returns (sign_res);
}